fix overflow

--- a/frontend/packages/ux-editor/src/components/TaskNavigation/TaskCardEditing.module.css
+++ b/frontend/packages/ux-editor/src/components/TaskNavigation/TaskCardEditing.module.css
@@ -9,6 +9,10 @@
   justify-content: space-between;
 }
 
+.editCard select {
+  width: 100%;
+}
+
 .btnGroup {
   display: flex;
   gap: var(--fds-spacing-2);
